# intent-verification

./: Cargo.toml  README.md
include/: intent_verification.h
src/: code_parser.rs  ffi.rs  git.rs  lib.rs  main.rs  openai.rs  types.rs  utils.rs
tests/: analyze_test.rs  extract_test_targets_test.rs  ffi_test.rs  git_test.rs  intent_verification_test.rs  openai_test.rs  read_test_targets_test.rs  repository_analysis_test.rs
