[package]
name = "intent-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.30.1"
colored = "3.0.0"
dotenvy = "0.15.7"
git2 = "0.20.2"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

[lib]
crate-type = ["cdylib", "rlib"]


